tests/NormalTests/paczka1/fuzzy1/72025551.err
Error in line 5: CUnlpdnrx A627 43,47
Error in line 6: CUnlpdnrx S5;0 78,4
Error in line 11: 90sf A627 9[,5
Error in line 7: CUnlpdnrx S530 202,3
Error in line 13: CUnlpdnrx A665 58,2
Error in line 12: CHD9KVgUj A627 31,4
Error in line 17: CUnlpdnrx A627 48,2
Error in line 28: b3vRfAz S530 -2,6
Error in line 16: Ifi A251 88,0
Error in line 18: 90sf A627 52,9
Error in line 26: b3vRfAz S530 70,5
Error in line 31: b3vRfAz A665 20,4
Error in line 24: CUnlpdnrx S530 47,8
